samples/_failures_safe/1761217513_5633b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7110e285.c: In function ‘main’:
./samples/SAFE/__tmp_7110e285.c:185:5: error: expected declaration or statement at end of input
  185 |     fclose(stream);
      |     ^~~~~~
